--- a/PondeerWithTailwind/PondeerWithTailwind.csproj
+++ b/PondeerWithTailwind/PondeerWithTailwind.csproj
@@ -1,15 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
 	<PropertyGroup>
-		<TargetFramework>net6.0</TargetFramework>
+		<TargetFramework>net8.0</TargetFramework>
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Blazored.LocalStorage" Version="4.1.5" />
-		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.0" />
-		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.0" PrivateAssets="all" />
+		<PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.3" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.3" PrivateAssets="all" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.6" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.6" />
 	</ItemGroup>
 
 	<Target Name="CheckForNpm" BeforeTargets="BuildCSS">
@@ -20,9 +22,7 @@
 	</Target>
 
 	<Target Name="BuildCSS" BeforeTargets="Compile">
-		<Exec EnvironmentVariables="NODE_ENV=production"
-			  Command="npx tailwindcss -i Styles/app.css -o wwwroot/css/app.css --minify"
-			  Condition=" '$(Configuration)' == 'Release' " />
+		<Exec EnvironmentVariables="NODE_ENV=production" Command="npx tailwindcss -i Styles/app.css -o wwwroot/css/app.css --minify" Condition=" '$(Configuration)' == 'Release' " />
 	</Target>
 
 </Project>
